--- a/sayfa-1.html
+++ b/sayfa-1.html
@@ -20,7 +20,7 @@
 <div>
 
     <div class="poster">
-       <div class="left-side"><img src="/proje-taslak/proje-dosya/hd-michael-jordan-wallpaper-whatspaper-19.jpg" width="400px" height="715">
+       <div class="left-side"><img src="./proje-taslak/proje-dosya/hd-michael-jordan-wallpaper-whatspaper-19.jpg" width="400px" height="715">
         </div>
         <div style="text-align: center;">
 
